apps/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dakuworks-frontend
  namespace: dakuworks-dev
  labels:
    app: dakuworks
    tier: frontend
    environment: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dakuworks
      tier: frontend
  template:
    metadata:
      labels:
        app: dakuworks
        tier: frontend
        environment: dev
    spec:
      containers:
      - name: frontend
        image: mbuaku/dakuworks-frontend:build-3
        ports:
        - containerPort: 3001
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1001
          capabilities:
            drop:
            - ALL
      restartPolicy: Always
      securityContext:
        fsGroup: 2000
